--- a/packages/SettingsLib/res/values/strings.xml
+++ b/packages/SettingsLib/res/values/strings.xml
@@ -1137,4 +1137,7 @@
 
     <!-- time label for event have that happened very recently [CHAR LIMIT=60] -->
     <string name="time_unit_just_now">Just now</string>
+
+    <!-- For estimated battery in QuickQS -->
+    <string name="power_discharge_by_only_short">Until %1$s</string>
 </resources>
